# cpp-game-of-life

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/imgui_extensions/: CMakeLists.txt  imgui_extensions.cpp
src/imgui_extensions/include/: imgui_extensions.h
